--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -5,10 +5,9 @@
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/common",
   "license": "MIT",
-  "main": "dist/index.js",
-  "browser": "dist/index.js",
+  "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "type": "module",
   "engines": {
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
@@ -43,10 +42,9 @@
   "exports": {
     ".": {
       "import": "./dist/esm/index.js",
-      "require": "./dist/index.js",
+      "require": "./dist/cjs/index.js",
       "default": "./dist/esm/index.js"
     },
-    "./dist/utils/*": "./dist/esm/utils/*.js",
     "./package.json": "./package.json"
   }
 }
