--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "site:dev": "pnpm -r --filter='@felte/site' dev",
     "test": "pnpm -r test",
     "test:ci": "pnpm -r test:ci",
+    "lint": "eslint packages --ignore-pattern *packages/site*",
     "build": "pnpm -r build --filter='!@felte/site'",
     "dev": "pnpm -r --parallel dev --filter='!@felte/site'",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
-    "publish": "pnpm i && pnpm -r publish",
+    "publish": "pnpm i && pnpm lint && pnpm -r publish",
     "postpublish": "pinst --enable"
   },
   "devDependencies": {
