--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,9 +25,14 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm i -g pnpm
-    - run: pnpm i
-    - run: pnpm build
+    - name: Install pnpm
+      run: npm i -g pnpm
+    - name: Install dependencies
+      run: pnpm i
+    - name: Build packages
+      run: pnpm build
+    - name: Lint code
+      run: pnpm lint
     - name: Run tests and generate coverage
       run: pnpm test:ci
     - name: Upload coverage to Codecov
