--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@felte/core",
   "version": "1.0.0-next.21",
-  "description": "Core package for FelteJS",
+  "description": "Core utility for Felte's integration with front-end frameworks",
   "main": "dist/cjs/index.js",
   "browser": "dist/esm/index.js",
   "module": "dist/esm/index.js",
