--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -210,6 +210,13 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/20406650?v=4",
       "profile": "https://www.alfredomm.com/",
       "contributions": ["code"]
+    },
+    {
+      "login": "Blankeos",
+      "name": "Carlo Taleon",
+      "avatar_url": "https://avatars.githubusercontent.com/u/38070918?v=4",
+      "profile": "https://github.com/Blankeos",
+      "contributions": ["doc"]
     }
   ],
   "contributorsPerLine": 7
