--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@testing-library/dom": "^7.29.4",
-    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/jest-dom": "6.6.1",
     "@testing-library/svelte": "^5.2.4",
     "@testing-library/user-event": "^13.1.3",
     "@types/chai": "^4.3.0",
